<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_3"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_sehatq_ecommerce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/et_round_bg_white"
        android:hint="@string/username"
        android:minHeight="45dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_round_bg_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="45dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rect_teal"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <LinearLayout
        android:id="@+id/lyt_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/grey_40" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/or_login" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/grey_40" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_google"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rect_grey_outline"
        android:drawableLeft="@drawable/ic_google_button"
        android:drawablePadding="10dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/grey_60"
        app:layout_constraintEnd_toStartOf="@+id/btn_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyt_lines" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rect_grey_outline"
        android:drawableLeft="@drawable/ic_facebook_button"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/cl_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_google"
        app:layout_constraintTop_toBottomOf="@id/lyt_lines" />


</androidx.constraintlayout.widget.ConstraintLayout>